--- a/style.scss
+++ b/style.scss
@@ -245,7 +245,7 @@ a{color:inherit}
 }
 .o-index{display: inline-block; margin-top:0.5em; transform:scale(0.7, 0.7); opacity:0.5; 
 	.o-index__number{margin-bottom: 0.1875em; display: block; font-weight: 700; text-transform: uppercase;}
-	.o-articles__header &{float: right;}
+	.o-articles__header &{float: right; margin-top: 0}
 }
 .o-break{display: block; height: 1em}
 .o-link{position: relative; color: $blue;
@@ -554,7 +554,7 @@ a{color:inherit}
 }
 .o-status{text-transform: uppercase; font-size:0.75em; display: block; padding:1.5em 0; color: $blue}
 .o-partner{float: left; width:percentage(1/3); margin-bottom: 12px; overflow: hidden;
-	figure{background-color: $blue; height: 10em; overflow: hidden;
+	figure{background-color: transparent; height: 10em; overflow: hidden;
 		.boot &{@include anim; @include fadeInLeft}
 	}
 	@for $i from 1 through 6 {
@@ -564,7 +564,7 @@ a{color:inherit}
 			}
 		}
 	}
-	@include device(xs){width:50%}
+	@include device(xs){width:100%}
 }
 .o-button--video{width: 5em; height: 5em; display: inline-block; background-position: center; background-repeat: no-repeat; @include image('btn-play.svg'); background-size: contain; @include prefix((transition: opacity 0.5s ease));
 	&:hover{opacity: 0.6}
@@ -760,9 +760,10 @@ a{color:inherit}
 	@include device(xs){display:none}
 }
 .c-partners__list{margin-bottom:3em; @extend .u-clear}
-.c-partners__logo{background-color:white; background-size:60%; background-repeat:no-repeat; background-position:center; height:100%; width: 100%; display:block; @include prefix((transition: transform 0.5s ease));
+.c-partners__logo{background-color:transparent; background-size:85%; background-repeat:no-repeat; background-position:center; height:100%; width: 100%; display:block; @include prefix((transition: transform 0.5s ease));
 	&:hover{@include prefix((transform: translateX(10%)))}
 }
+
 .c-authors{float: left; width: 70%; @extend .u-clear;
 	@include device(xs){float:none; width:auto}
 }
